--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - .:/code
     ports:
       - "5001:5001"
+    depends_on:
+      - ordering_worker
   users:
     build: users-microservice/
     command: bash -c "python app.py"
@@ -62,6 +64,14 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+  redis:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - $PWD/data/redis:/redis/data
   ordering_worker:
     build: ordering-microservice/
     command: bash -c "python worker.py"
@@ -79,3 +89,4 @@ services:
       - "5009:5009"
     depends_on:
       - rabbitmq
+      - redis
